[build-system]
requires = ["setuptools>=65.0", "setuptools_scm[toml]>=7.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Denspart"
authors = [
  { name="HORTON-ChemTools Dev Team", email="horton.chemtools@gmail.com" },
]
description = "DensPart performs Atoms-in-molecules density partitioning."
readme = "README.rst"
license = {file = "COPYING"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = ["numpy>=1.0", "scipy"]
dynamic = ["version"]

[project.urls]
Issues = "https://github.com/theochem/denspart/issues"
Source = "https://github.com/theochem/denspart/"
Changelog = "https://github.com/theochem/denspart/blob/main/CHANGELOG.md"


[project.scripts]
denspart-from-horton3 = "denspart.adapters.horton3:main"
denspart-from-gpaw = "denspart.adapters.gpaw:main"
denspart-from-adf = "denspart.adapters.adf:main"
denspart = "denspart.__main__:main"
denspart-write-extxyz = "denspart.utils.write_extxyz:main"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "I", "PGH", "PL", "RUF"]
ignore = ["PLR2004", "PLR0913", "PLR0912", "PLW2901", "PLR0915"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-v"

[tool.setuptools_scm]
write_to = "src/denspart/_version.py"
version_scheme = "post-release"
local_scheme = "no-local-version"
